--- a/trunk/hedwig-webmail/src/main/webapp/css/default.css
+++ b/trunk/hedwig-webmail/src/main/webapp/css/default.css
@@ -197,11 +197,21 @@ a {
   color: #676a6c;
   text-decoration: none;
 }
+#main-tab table tr.reply .fa-caret-right {
+  color: #31708f;
+  padding-left: 50px;
+}
 #main-tab table tr.recent a {
   font-weight: 600;
 }
 #main-tab table tr.checked > td,  #main-tab table tr.checked:hover > td {
   background-color: #fcf8e3 !important;
+}
+#main-tab table tr > td.title {
+  max-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 #main-tab table tr.unread > td {
   background-color: #f5f5f5;
@@ -214,6 +224,9 @@ a {
 }
 #main-tab table .fa-star {
   color: gold;
+}
+#main-tab table th.chk {
+	width: 3ex;
 }
 #main-tab table th.star {
   width: 5ex;
